--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -335,8 +335,10 @@
   <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">Valfria länkförhandsvisningar stöds nu för några av de mest populära platserna på Internet.</string>
   <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Du kan inaktivera eller aktivera den här funktionen när som helst i dina Signal-inställningar (Sekretess &gt; Skicka länkförhandsvisningar).</string>
   <string name="ExperienceUpgradeActivity_got_it">Uppfattat</string>
+  <string name="ExperienceUpgradeActivity_introducing_stickers">Introducerar klistermärken</string>
   <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers">Varför använda ord när du kan använda klistermärken?</string>
   <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers_tap_this_icon">Varför använda ord när du kan använda klistermärken? Tryck på den här ikonen på tangentbordet:</string>
+  <string name="ExperienceUpgradeActivity_lets_go">Nu kör vi</string>
   <!--GcmBroadcastReceiver-->
   <string name="GcmBroadcastReceiver_retrieving_a_message">Hämtar ett meddelande…</string>
   <!--GcmRefreshJob-->
